[gd_scene load_steps=4 format=3 uid="uid://ci4uofxgfevoe"]

[ext_resource type="Texture2D" uid="uid://cwm6wlvkh0v68" path="res://player/p_death/death_particle.png" id="1_8bgns"]
[ext_resource type="Script" path="res://player/p_death/player_death.gd" id="1_hnu1g"]
[ext_resource type="Texture2D" uid="uid://bkmx0qwx2k4b2" path="res://assets/mario.png" id="2_o221v"]

[node name="PlayerDeath" type="Node2D"]
script = ExtResource("1_hnu1g")

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
texture = ExtResource("1_8bgns")
direction = Vector2(0, -0.1)
spread = 0.0
gravity = Vector2(0, 400)
initial_velocity_min = 200.0
initial_velocity_max = 200.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_o221v")
region_enabled = true
region_rect = Rect2(116, 8, 16, 16)

[connection signal="finished" from="GPUParticles2D" to="." method="_on_gpu_particles_2d_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
